<resources>
    <string name="app_name" translatable="false">BarberApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_title">Welcome  %1$s</string>
    <string name="barbershop">Select Barber Shop</string>
    <string name="barber">Select Barber</string>
    <string name="services">Select Services</string>
    <string name="setAppointments">Select Appointments</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="appointments">My Appointments</string>
    <string name="myServices">My Services</string>
    <string name="mySchedule">My Schedule</string>
    <string name="yourGallery">Your Gallery</string>
    <string name="appointmentDate">Appointment Date</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="selectAppointments">Select Appointment</string>
    <string name="cancel">Cancel</string>
    <string name="serviceName">Service Name</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="defineWorkSchedule">Define Work Schedule</string>
    <string name="myGallery">My Gallery</string>
    <string name="takePicture">Take Picture</string>
    <string name="gallery">Gallery</string>
    <string name="edit">Edit</string>
    <string name="price_text">Price: €%1$s</string>
    <string name="duration_text">Duration: %1$s</string>
    <string name="canceled">Canceled</string>
    <string name="active">Active</string>
    <string name="missed">Missed</string>
    <string name="completed">Completed</string>
    <string name="inactive">Inactive</string>
    <string name="barberSubTitle">Manage Your Work</string>
    <string name="clientSubTitle">Make your Appointment</string>
    <string name="addComment">Add a Comment</string>
    <string name="writeComment">Write your comment here</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>