<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#F6BE00"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@android:color/black"
        android:elevation="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addComment"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp" />

        <EditText
            android:id="@+id/etComentario"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="#212121"
            android:hint="@string/writeComment"
            android:padding="10dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="254dp"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:padding="10dp"
            android:stepSize="1.0"
            android:tint="#F6BE00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btnCancelar"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnSalvar"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>